cat & tag populated after update message 'pending' added bug fix - event date broken in some situation

--- a/src/app/post-manager/editor/editor.component.scss
+++ b/src/app/post-manager/editor/editor.component.scss
@@ -3,6 +3,9 @@
   font-size: 16px;
   color: rgba(41, 49, 72, 1);
 }
+.bg-background {
+  background: rgba(239, 243, 247, 1);
+}
 
 /// TEMPORARY END
 
